Prevent title text on Success view from wrapping to a new line

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss
@@ -51,11 +51,9 @@
 .SuccessView__title {
 	margin-top: 125px;
 	font-size: 24px;
-	font-weight: 600;
-	max-width: 450px;
+	font-weight: 500;
 	line-height: 2.33;
 	text-align: center;
-	max-width: 430px;
 }
 
 .SuccessView__subtitle {
